<resources>
    <string name="app_name">GuiameDuruelo</string>
    <string name="title_activity_map">GuíameDuruelo</string>

    <string name="image_desc">Imagen del sitio</string>

    <string name="restaurantes">Restaurantes</string>
    <string name="hoteles">Hoteles</string>
    <string name="servicios">Servicios</string>
    <string name="turismo">Turismo</string>
    <string name="markers">Markers</string>
    <string name="title_activity_sections_activity">Secciones</string>

    <string name="bt_map">Mostrar en el mapa</string>
    <string name="bt_widget">Mostrar en el widget</string>

    <string name="list">Lista</string>
    <string name="empty_string">Empty View</string>

    <string name="download_error">Error en la descarga de datos</string>
    <string name="fcm_message">¡Hora de comer!</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="acept">Aceptar</string>

    <string name="permission_title">Acceder a la ubicación del teléfono</string>
    <string name="permission_message">Debes aceptar este permiso para que la app te localice en el mapa</string>

    <string name="geofence_entry_msg">¡Bienvenido a Duruelo de la Sierra!¡Disfruta de tu estancia!</string>

    <string name="appwidget_title">¡Bienvenido a Duruelo!</string>
    <string name="appwidget_description">Mira aquí nuestros hoteles</string>
    <string name="appwidget_texto"> ¡Haz click!</string>
    <string name="add_widget">Add widget</string>

    <string name="bar">BARES CERCANOS</string>
    <string name="huerta">La Huerta</string>
    <string name="huerta_address">Calle Nueva, 15</string>
    <string name="narcis">Bar Narcis</string>
    <string name="narcis_address">Calle Buena Vista, 9</string>
    <string name="mingo">Bar Mingo</string>
    <string name="mingo_address">Plaza la Carta Puebla, 2</string>
    <string name="favorited">Favoritos</string>

</resources>
